# GP2040-CE

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: DriverArchitectureV2.cmake  GitSubmodules.cmake  GitVersion.cmake  ProjectSetup.cmake  README.md  SourceFiles.cmake  TargetConfig.cmake  WebBuild.cmake
configs/Pico/: BoardConfig.h
configs/Pico2W/: BoardConfig.h  CMakeLists.txt  README.md  btstack_config.h  gp2040_pico2w.gatt
configs/PicoPlus2/: BoardConfig.h
configs/PicoW/: BoardConfig.h  CMakeLists.txt  README.md  gp2040_picow.gatt
configs/PicoWBluetooth/: BoardConfig.h  README.md
docs/: bluetooth-support.md  driver-architecture-v2.md  driver-manager-v2-updates.md  dynamic-build-matrix.md
docs/addons/: MAX17048Monitor.md
headers/: driverintegration.h  drivermanager_v2.h  enums.h  gamepad.h  gp2040.h  gp2040aux.h  peripheralmanager.h  playerleds.h  storagemanager.h  tusb_config.h  types.h  usbhostmanager.h
headers/addons/: bootsel_button.h  haptics.h  max17048monitor.h  neopicoleds.h  retroboard.h
headers/bluetooth/: BluetoothDriver.h  (+1 more)
lib/: CMakeLists.txt
lib/MAX17048/: CMakeLists.txt  MAX17048.cpp  MAX17048.h  README.md
proto/: config.proto  enums.proto
scripts/: update-workflow-boards.ps1
src/: config_utils.cpp  driverintegration.cpp  drivermanager.cpp  drivermanager_v2.cpp  gamepad.cpp  gp2040.cpp  gp2040aux.cpp  layoutmanager.cpp  main.cpp  playerleds.cpp  storagemanager.cpp  system.cpp  usbdriver.cpp  webconfig.cpp
www/: .env  .eslintrc.yml  env.d.ts  package-lock.json  package.json  vite.config.ts
(+105 files in other folders)
